# climode-reproducibility

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
docs/: on_vastai.md
era5_data/: DELETEME.md
notes/: eval_run.ipynb  load_and_run.ipynb  model_descriptions.ipynb  single_file_definition.ipynb  single_file_with_trainpy.ipynb  train_global.ipynb
report/: appendix.tex  atml.sty  main.tex
scripts/: commands.sh  devsetup.sh  download.py  evaluate.py  install.sh  scrape_weatherbench.py  train.py  unzip.py
src/climode/: evaluation_global.py  evaluation_global_longer_leadtime.py  evaluation_monthly.py  evaluation_region.py  model_function.py  train_global.py  train_global_better.py  train_global_longer_leadtime_hyperparam_search.py  train_monthly.py  train_region.py  utils.py
tests/: test_train.py
